# khmer-word-segmenter-benchmark

./: .gitignore  BENCHMARK_REPORT.md  CLAUDE.md  CPP_PORT_PLAN.md  README.md  RUST_PORT_PLAN.md  khmer_segmenter.sln  setup_cython.py
data/: golden_master.jsonl  khmer_dictionary_words.txt  test_cases.json  test_input.txt  test_subset.txt
khmer-bun/: package.json  tsconfig.json
khmer-bun/src/: constants.ts  dictionary.ts  heuristics.ts  index.ts  segmenter.ts  worker.ts
khmer-bun/tests/: segmenter.test.ts
khmer-cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  build_msvc.bat  test_input.txt  test_output.json
khmer-cpp/src/: constants.hpp  dictionary.cpp  dictionary.hpp  main.cpp  segmenter.cpp  segmenter.hpp
khmer-cpp/tests/: segmenter_test.cpp
khmer-dotnet/: Constants.cs  Dictionary.cs  Heuristics.cs  KhmerSegmenter.cs  Program.cs  Trie.cs  khmer-dotnet.csproj
khmer-dotnet/KhmerSegmenter.Tests/: KhmerSegmenter.Tests.csproj  SegmenterTests.cs
khmer-go/: README.md  go.mod  khmer
khmer-go/cmd/khmer/: main.go
khmer-go/pkg/khmer/: constants.go  dictionary.go  heuristics.go  segmenter.go  segmenter_test.go
khmer-java/: README.md  pom.xml
khmer-java/src/main/java/khmer/: Constants.java  Dictionary.java  Heuristics.java  KhmerSegmenter.java  Main.java
khmer-java/src/test/java/khmer/: SegmenterTest.java
khmer-node/: package-lock.json  package.json  tsconfig.json
khmer-node/src/: constants.ts  dictionary.ts  heuristics.ts  index.ts  segmenter.ts  worker.ts
khmer-node/tests/: segmenter.test.ts
khmer-rs/: Cargo.toml  README.md
khmer-rs/benches/: segmentation_benchmark.rs
khmer-rs/src/: constants.rs  dictionary.rs  heuristics.rs  lib.rs  main.rs  segmenter.rs
khmer-rs/tests/: integration_test.rs  segmenter_test.rs
khmer-wasm/: package-lock.json  package.json  runner.js  worker.js
khmer-wasm/assembly/: constants.ts  dictionary.ts  heuristics.ts  index.ts  segmenter.ts
khmer-wasm/tests/: segmenter.test.ts
khmer_segmenter/: viterbi.py  viterbi_fast.pyx  viterbi_optimized.py
scripts/: benchmark_battle.py  benchmark_comparison.py  benchmark_simple.py  benchmark_suite.py  compare_outputs.py  debug_mismatches.py  find_unknown_words.py  generate_golden_master.py  generate_json_output.py  test_acronyms.py  test_all_implementations.py  test_viterbi.py
tests/: test_segmenter.py
