[package]
name = "khmer-rs"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code <noreply@anthropic.com>"]
description = "High-performance Khmer word segmenter ported from Python"

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
anyhow = "1.0"
fxhash = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Needed for reading frequency file (input only)
# 1BRC: Custom fast JSON builder used for output instead of serde

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "segmentation_benchmark"
harness = false

# 1BRC Optimization: Aggressive release profile for maximum performance
[profile.release]
opt-level = 3
lto = "fat"           # Link-time optimization for cross-crate inlining
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Remove unwinding for smaller binary
strip = true          # Strip symbols for smaller binary
